# allclear

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  NEXT_SESSION_PROMPT.md  README.md  allsky.bib  litreview.tex  pyproject.toml
.github/workflows/: ci.yml
allclear/: __init__.py  api.py  catalog.py  cli.py  detection.py  instrument.py  local_offset.py  manual_fit.py  manual_fit_web.py  matching.py  monitor.py  obscuration.py  plotting.py  plotting_inkblot.py  progress.py  projection.py  solver.py  strategies.py  synthetic.py  transmission.py  utils.py
allclear/data/: hipparcos_bright.ecsv
allclear/tests/: conftest.py  test_api.py  test_detection.py  test_matching.py  test_obscuration.py  test_obscuration_integration.py  test_projection.py  test_solver.py  test_synthetic_roundtrip.py
benchmark/: README.md  init_solve.sh  run_all.sh
benchmark/data/: .gitignore
benchmark/labels/: example_label.json  label_schema.json
benchmark/scripts/: analyze_pointing_drift.py  build_obscuration_map.py  compare_fixed_vs_monitor.py  compare_seasonal_runs.py  extract_nightly_clearfrac.py  fetch_apicam_drift_study.py  fetch_cloudynight.py  fetch_eso_apicam.py  fetch_liverpool_skycam.py  fig_guided_matching.py  fig_pipeline_flowchart.py  fig_projection_comparison.py  generate_paper_figures.py  generate_paper_figures_v2.py  generate_transmission_comparison.py  make_triptychs.py  run_obscuration_ablation.py  run_obscuration_pass.py  run_runtime_scaling.py  run_seasonal_blind.py  score_frames.py  sim_night_efficiency.py  sync_paper_figures.sh  validate_wcs_roundtrip.py
